--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
 
     <div class="footer-col-1 column">
       <ul>
-        <li>{{ site.title }}</li>
+        <li></li>
         <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
       </ul>
     </div>
@@ -30,6 +30,10 @@
             <span class="username">{{ site.username }}</span>
           </a>
         </li>
+        <li>
+        <a href="http://instagram.com/raphaelleheaf"><img src="https://raw.githubusercontent.com/raphaelleheaf/nevercinderella/gh-pages/_assets/instagram-16.jpg"></a>
+        </li>
+        </path>
       </ul>
     </div>
 
