--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,6 +16,7 @@
         {% for page in site.pages %}
           <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
         {% endfor %}
+        <a class="page-link" href="/lookbooks">Lookbooks</a>
       </div>
     </nav>
 
