--- a/css/main.css
+++ b/css/main.css
@@ -66,6 +66,7 @@ a:visited { color: #205caa; }
   float: right;
   line-height: 56px;
   margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .site-nav .menu-icon { display: none; }
@@ -166,6 +167,15 @@ a:visited { color: #205caa; }
   color: #818181;
 }
 
+/* Lookbooks styles */
+/* ----------------------------------------------------------*/
+
+.lookbooks li
+{
+display: inline;
+list-style-type: none;
+padding-right: 20px;
+}
 
 /* Post styles */
 /* ----------------------------------------------------------*/
