amend instagram link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,7 +31,7 @@
           </a>
         </li>
         <li>
-        <a href="http://instagram.com/raphaelleheaf"><img src="https://raw.githubusercontent.com/raphaelleheaf/nevercinderella/gh-pages/_assets/instagram-16.jpg"></a>
+        <a href="http://instagram.com/nevercinderella"><img src="https://raw.githubusercontent.com/raphaelleheaf/nevercinderella/gh-pages/_assets/instagram-16.jpg"></a>
         </li>
         </path>
       </ul>
